# Login-Register-RustActix

./: Cargo.toml  README.md  userss.sql
src/: auth.rs  dashboard.rs  main.rs
templates/: dashboard.html  login.html  register.html  welcome.html
