[package]
name = "actix_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tera = "1.17"
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls"] }
log = "0.4"
env_logger = "0.10" 
bcrypt = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
regex = "1"           
dotenv = "0.15"
actix-session = { version = "0.6", features = ["cookie-session"] }

